Анализ активности пользователей в социальной сети